add transaction proxy